; ModuleID = '/home/carl/AnghaBench/openvpn/src/openvpnserv/extr_automatic.c_create_event.c'
source_filename = "/home/carl/AnghaBench/openvpn/src/openvpnserv/extr_automatic.c_create_event.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.security_attributes = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @create_event(i32 %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca %struct.security_attributes, align 4
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %11 = load i32, i32* %7, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %23

13:                                               ; preds = %4
  %14 = call i32 @init_security_attributes_allow_all(%struct.security_attributes* %10)
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %17, label %16

16:                                               ; preds = %13
  store i32* null, i32** %5, align 8
  br label %28

17:                                               ; preds = %13
  %18 = getelementptr inbounds %struct.security_attributes, %struct.security_attributes* %10, i32 0, i32 0
  %19 = load i32, i32* %9, align 4
  %20 = load i32, i32* %8, align 4
  %21 = load i32, i32* %6, align 4
  %22 = call i32* @CreateEvent(i32* %18, i32 %19, i32 %20, i32 %21)
  store i32* %22, i32** %5, align 8
  br label %28

23:                                               ; preds = %4
  %24 = load i32, i32* %9, align 4
  %25 = load i32, i32* %8, align 4
  %26 = load i32, i32* %6, align 4
  %27 = call i32* @CreateEvent(i32* null, i32 %24, i32 %25, i32 %26)
  store i32* %27, i32** %5, align 8
  br label %28

28:                                               ; preds = %23, %17, %16
  %29 = load i32*, i32** %5, align 8
  ret i32* %29
}

declare dso_local i32 @init_security_attributes_allow_all(%struct.security_attributes*) #1

declare dso_local i32* @CreateEvent(i32*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
